# CloudFileStorageModule

./: .buildinfo  .gitignore  APIReference.html  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  api.html  cloud_storage_pwc.AzureStorage.Blob.html  cloud_storage_pwc.AzureStorage.BlobAndDataLake.html  cloud_storage_pwc.AzureStorage.DataLake.html  cloud_storage_pwc.AzureStorage.Utils.html  cloud_storage_pwc.AzureStorage.html  cloud_storage_pwc.html  conf.html  conf.py  dev.html  dev.py  genindex.html  index.html  index.rst  installation.html  modules.html  notebook.ipynb  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tests.html  usage.html
.devcontainer/: devcontainer.json
.doctrees/: APIReference.doctree  api.doctree  cloud_storage_pwc.AzureStorage.Blob.doctree  cloud_storage_pwc.AzureStorage.BlobAndDataLake.doctree  cloud_storage_pwc.AzureStorage.DataLake.doctree  cloud_storage_pwc.AzureStorage.Utils.doctree  cloud_storage_pwc.AzureStorage.doctree  cloud_storage_pwc.doctree  conf.doctree  dev.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  tests.doctree  usage.doctree
__blobstorage__/: cb7f592c-7f13-4ac9-80cd-142f037a370b  eae66941-9ff7-4898-b857-a274f7e071ef
_sources/: api.rst.txt  cloud_storage_pwc.AzureStorage.DataLake.rst.txt  cloud_storage_pwc.AzureStorage.Utils.rst.txt  cloud_storage_pwc.AzureStorage.rst.txt  cloud_storage_pwc.rst.txt  modules.rst.txt
api_write/: api_writer_csv.html
cloud_storage_pwc/: __init__.py  requirements.txt
deploy/: cloud-storage-pwc Releases.json  config_modulepath.ps1  config_toml.ps1  pipelines.yml  test_env.ps1  web_env.ps1
doc/: APIReference.rst  api.rst  cloud_storage_pwc.AzureStorage.Blob.rst  cloud_storage_pwc.AzureStorage.BlobAndDataLake.rst  cloud_storage_pwc.AzureStorage.Exceptions.rst  cloud_storage_pwc.AzureStorage.StorageAccountVirtualClass.rst  cloud_storage_pwc.AzureStorage.Utils.rst  conf.py  index.rst  installation.rst  usage.rst  usage2.rst
src/: __init__.py
(+56 files in other folders)
