[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cloud_storadev444"
version = "2"
authors = [
  { name="artur starosta", email="artur.starosta@pwc.com" },
]
description = "library to work with azure storageaccount"

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
