[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cloud_storage_pwc"
version = "1.0.66"
authors = [
  { name="artur starosta", email="artur.starosta@pwc.com" },
]
description = "library to work with azure storageaccount"

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy==1.23.2",
"pandas==2.2.0",
"azure-identity==1.15.0",
"azure-storage-file-datalake==12.14.0",
"azure-storage-blob==12.19.1",
"xlsxwriter==3.2.0",
"polars==0.20.18",
"openpyxl==3.1.2",
"fastexcel==0.10.2",
"pyarrow==15.0.2" ]
